--- a/coupon-app/src/main/resources/application.yml
+++ b/coupon-app/src/main/resources/application.yml
@@ -11,9 +11,9 @@ druid:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://kim1:3306/27_coupon?autoReconnect=true&failOverReadOnly=false&useUnicode=true&characterEncoding=UTF-8&useSSL=false
-    username: root
-    password: 123
+    url: jdbc:mysql:
+    username: 
+    password: 
     type: com.alibaba.druid.pool.DruidDataSource
     initial-size: 1
     max-wait-millis: 60000
@@ -32,9 +32,9 @@ spring:
 
 
   redis:
-    host: kim1
-    port: 2683
-    password: FSDFASN22RR2656jflds84kfjWYFADS37VUUYT84326
+    host: 
+    port: 
+    password: 
     timeout: 6000ms
 
 
@@ -55,7 +55,7 @@ dubbo:
     # 注册中心协议
     protocol: zookeeper
     # 注册中心地址
-    address: kim2:2181
+    address: 
 
   # dubbo协议在20880端口暴露服务
   # 协议名称
@@ -75,7 +75,7 @@ dubbo:
 #    protocol: registry
 #  config-center:
 #    protocol: zookeeper
-#    address: kim2:2181
+#    address: 
 
 
 logging:
@@ -88,21 +88,21 @@ rocketmq:
   consumer:
     test:
       groupName: test
-      namesrvAddr: kim2:9876
+      namesrvAddr: 
       topic: TopicTest
       tag: Tag1
     order:
       groupName: saveOrder
-      namesrvAddr: kim2:9876
+      namesrvAddr: 
       topic: saveOrder
       tag: Tag1
     pay:
       groupName: payResult
-      namesrvAddr: kim2:9876
+      namesrvAddr: 
       topic: payResult
       tag: Tag1
     cancel:
       groupName: cancelOrder
-      namesrvAddr: kim2:9876
+      namesrvAddr: 
       topic: cancelOrder
       tag: Tag1
